--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/form": "5.0.*",
         "symfony/framework-bundle": "5.0.*",
         "symfony/http-client": "5.0.*",
+        "symfony/http-foundation": "5.0.*",
         "symfony/intl": "5.0.*",
         "symfony/mailer": "5.0.*",
         "symfony/monolog-bundle": "^3.1",
@@ -24,7 +25,8 @@
         "symfony/orm-pack": "*",
         "symfony/process": "5.0.*",
         "symfony/security-bundle": "5.0.*",
-        "symfony/security-http": "5.0.*",
+        "symfony/security-core": "5.0.*",
+        "symfony/security-http": "5.0.7",
         "symfony/serializer-pack": "*",
         "symfony/string": "5.0.*",
         "symfony/translation": "5.0.*",
