--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -5,7 +5,7 @@ vich_uploader:
         property_image:
             uri_prefix: /images/properties
             upload_destination: '%kernel.project_dir%/public/images/properties'
-            namer: Vich\UploaderBundle\Naming\OrignameNamer
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
 
     #mappings:
     #    products:
